--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'jacoco'
 
 repositories {
     mavenCentral()
@@ -7,10 +8,6 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.12'
     testCompile("org.assertj:assertj-core:3.11.1")
-}
-
-plugins {
-    id 'jacoco'
 }
 
 test {
